# openvino.genai

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: genai_lib.yml  genai_package.yml  genai_python_lib.yml
samples/cpp/chat_sample/: chat_sample.cpp
src/cpp/: CMakeLists.txt
src/cpp/cmake/: openvino_genaiConfig.cmake
src/cpp/include/openvino/genai/: generation_config.hpp  llm_pipeline.hpp  tokenizer.hpp  visibility.hpp
src/cpp/include/openvino_genai/: generation_config.hpp  llm_pipeline.hpp  streamer_base.hpp  tokenizer.hpp
src/cpp/src/: generation_config.cpp  generation_config_helper.hpp  greedy_decoding.cpp  group_beam_searcher.cpp  group_beam_searcher.hpp  llm_pipeline.cpp  multinomial_decoding.cpp  text_callback_streamer.cpp  text_callback_streamer.hpp  tokenizer.cpp  utils.cpp
src/python/: CMakeLists.txt  py_generate_pipeline.cpp
tests/python_tests/: list_test_models.py
text_generation/causal_lm/cpp/: CMakeLists.txt  README.md  beam_search_causal_lm.cpp  greedy_causal_lm.cpp  greedy_sampling.hpp  multinomial_causal_lm.cpp  random_sampling.hpp  stateless_greedy_causal_lm.cpp
text_generation/causal_lm/cpp/generate_pipeline/: chat_sample.cpp  generate_sample.cpp
